<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BroadcastBestPractice</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="userName">用户名:</string>
    <string name="inputUserName">请输入用户名</string>
    <string name="passWord">密码:</string>
    <string name="login">登陆</string>
	<string name="offLine">强制下线</string>
	<string name="rememberPwd">记住密码</string>
</resources>